crates/bal-parser/src/snapshots/bal_parser__parser_test__tests__complete_module.snap
---
source: crates/bal-parser/src/parser_test.rs
assertion_line: 87
expression: parse(input)
---
Ok(
    GreenNode {
        kind: SyntaxKind(
            38,
        ),
        text_len: 88,
        n_children: 3,
    },
)
