crates/bal-parser/src/snapshots/bal_parser__parser_test__tests__empty_file.snap
---
source: crates/bal-parser/src/parser_test.rs
assertion_line: 50
expression: parse(input)
---
Ok(
    GreenNode {
        kind: SyntaxKind(
            39,
        ),
        text_len: 0,
        n_children: 0,
    },
)
