crates/bal-parser/src/snapshots/bal_parser__parser_test__tests__error_recovery_missing_param_type.snap
---
source: crates/bal-parser/src/parser_test.rs
assertion_line: 95
expression: parse(input)
---
GreenNode {
    kind: SyntaxKind(
        38,
    ),
    text_len: 21,
    n_children: 1,
}
