crates/bal-parser/src/snapshots/bal_parser__parser_test__tests__error_recovery_missing_semicolon.snap
---
source: crates/bal-parser/src/parser_test.rs
assertion_line: 89
expression: parse(input)
---
GreenNode {
    kind: SyntaxKind(
        38,
    ),
    text_len: 13,
    n_children: 1,
}
