crates/bal-parser/src/snapshots/bal_parser__parser_test__tests__function_with_multiple_params.snap
---
source: crates/bal-parser/src/parser_test.rs
assertion_line: 74
expression: parse(input)
---
Ok(
    GreenNode {
        kind: SyntaxKind(
            39,
        ),
        text_len: 37,
        n_children: 1,
    },
)
