crates/bal-parser/src/snapshots/bal_parser__parser_test__tests__public_function.snap
---
source: crates/bal-parser/src/parser_test.rs
assertion_line: 63
expression: parse(input)
---
GreenNode {
    kind: SyntaxKind(
        38,
    ),
    text_len: 23,
    n_children: 1,
}
