crates/bal-parser/src/snapshots/bal_parser__parser_test__tests__simple_function.snap
---
source: crates/bal-parser/src/parser_test.rs
assertion_line: 62
expression: parse(input)
---
Ok(
    GreenNode {
        kind: SyntaxKind(
            39,
        ),
        text_len: 34,
        n_children: 1,
    },
)
