crates/bal-parser/src/snapshots/bal_parser__parser_test__tests__simple_import.snap
---
source: crates/bal-parser/src/parser_test.rs
assertion_line: 56
expression: parse(input)
---
Ok(
    GreenNode {
        kind: SyntaxKind(
            39,
        ),
        text_len: 14,
        n_children: 1,
    },
)
